@@ -1,0 +1,8 @@
+﻿foo := 10
+
+if foo > 0
+	bar := "positive"
+else
+	bar := "negative"
+endif
+
