@@ -21,3 +21,10 @@ Parse Binary Expression Level 1 and 2
 2009-07-13
 Parsing Procedure with Parameters, with tests
 Example Tests SimpleAssignment.prg
+
+2009-12-09
+Comparison operators
+CompareExpression w/Tests
+Compare in Parser w/Tests
+SimpleIf.prg
+SimpleProcedure.prg Work in progress
